[gd_scene load_steps=16 format=2]

[ext_resource path="res://sprites/Small Monster/attack.png" type="Texture" id=1]
[ext_resource path="res://Components/FSM.tscn" type="PackedScene" id=2]
[ext_resource path="res://Components/Health.tscn" type="PackedScene" id=3]
[ext_resource path="res://Components/EnemyMovement.tscn" type="PackedScene" id=4]
[ext_resource path="res://sprites/Small Monster/small morun.png" type="Texture" id=5]
[ext_resource path="res://scripts/Patroller.gd" type="Script" id=6]
[ext_resource path="res://Music/patrollerattack.ogg" type="AudioStream" id=7]
[ext_resource path="res://Music/patrollerdamage.ogg" type="AudioStream" id=8]
[ext_resource path="res://scripts/SoundEffects.gd" type="Script" id=9]


[sub_resource type="CircleShape2D" id=1]
radius = 14.0

[sub_resource type="Animation" id=2]
resource_name = "attack"
length = 1.3
tracks/0/type = "value"
tracks/0/path = NodePath("runSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("attackSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("attackSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("attackSprite/damageRange/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.8, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=3]
resource_name = "running"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("attackSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("runSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("runSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 5, 6 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 5, 10 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 24, 10 )

[node name="Patroller" type="KinematicBody2D"]
collision_layer = 8
script = ExtResource( 6 )

[node name="Movement" parent="." instance=ExtResource( 4 )]

[node name="Health" parent="." instance=ExtResource( 3 )]
maxHealth = 50

[node name="FSM" parent="." instance=ExtResource( 2 )]

[node name="runSprite" type="Sprite" parent="."]
visible = false
position = Vector2( 27, -11 )
texture = ExtResource( 5 )
vframes = 6

[node name="attackSprite" type="Sprite" parent="."]
position = Vector2( 27, -11 )
texture = ExtResource( 1 )
vframes = 13

[node name="damageRange" type="Area2D" parent="attackSprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="attackSprite/damageRange"]
position = Vector2( 27, 10 )
shape = SubResource( 1 )
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 2 )
anims/running = SubResource( 3 )

[node name="collider" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="onFloor" type="RayCast2D" parent="."]
position = Vector2( 6, 6 )
enabled = true
cast_to = Vector2( 0, 2 )

[node name="onWall" type="RayCast2D" parent="."]
position = Vector2( 7, -14 )
enabled = true
cast_to = Vector2( 0, 19 )

[node name="hurtbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]
position = Vector2( 0, -4 )
shape = SubResource( 5 )

[node name="AttackRange" type="Area2D" parent="."]
position = Vector2( 27, -11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange"]
position = Vector2( -3, 10 )
shape = SubResource( 6 )

[node name="damageTimer" type="Timer" parent="."]

[node name="soundeffects" type="Node2D" parent="."]
script = ExtResource( 9 )

[node name="attack" type="AudioStreamPlayer2D" parent="soundeffects"]
stream = ExtResource( 7 )

[node name="damage" type="AudioStreamPlayer2D" parent="soundeffects"]
stream = ExtResource( 8 )
[connection signal="body_entered" from="attackSprite/damageRange" to="." method="_on_damageRange_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="AttackRange" to="." method="_on_AttackRange_body_entered"]
[connection signal="body_exited" from="AttackRange" to="." method="_on_AttackRange_body_exited"]
